--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -273,15 +273,10 @@ jobs:
             # ============================================
             echo ""
             echo "🔑 Patching kubeconfig with HOST_IP..."
-            
-            if [ -f /etc/kubernetes/admin.conf ]; then
-              sudo sed -i "s|server:.*6443|server: https://${{ secrets.HOST_IP }}:6443|g" /etc/kubernetes/admin.conf
-              echo "   ✅ /etc/kubernetes/admin.conf patched"
-            fi
 
-            if [ -f ~/.kube/config ]; then
-              sudo sed -i "s|server:.*6443|server: https://${{ secrets.HOST_IP }}:6443|g" ~/.kube/config
-              echo "   ✅ ~/.kube/config patched"
+            if [ -f "/home/${{ secrets.USERNAME }}/.kube/config" ]; then
+              sed -i "s|server:.*6443|server: https://${{ secrets.HOST_IP }}:6443|g" "/home/${{ secrets.USERNAME }}/.kube/config"
+              echo "   ✅ kubeconfig patched"
             fi
             
             # ============================================
