--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -271,44 +271,36 @@ jobs:
             echo "✅ Kubespray completed"
             
             # ============================================
-            # 7️⃣ kubeconfig 수정 (kubeadm init 이후)
-            # ============================================
-            
-            KUBECONFIG_PATH="/home/${{ secrets.USERNAME }}/.kube/config"
-
-            echo ""
-            echo "🔑 Patching kubeconfig with HOST_IP..."
-
-            if [ -f "$KUBECONFIG_PATH" ]; then
-              sed -i "s|server:.*6443|server: https://${{ secrets.HOST_IP }}:6443|g" "$KUBECONFIG_PATH"
-              echo "   ✅ kubeconfig patched"
-            fi
-            
-            # ============================================
-            # 8️⃣ kubeconfig 복사
+            # 7️⃣ kubeconfig 설정
             # ============================================
             echo ""
             echo "🔑 Setting up kubeconfig..."
-            
-            if [ ! -f "$KUBECONFIG_PATH" ]; then
-              mkdir -p "$(dirname "$KUBECONFIG_PATH")"
-              sudo cp /${{ secrets.FIRST_USERNAME }}/.kube/config "$KUBECONFIG_PATH"
+
+            KUBECONFIG_PATH="/home/${{ secrets.USERNAME }}/.kube/config"
+
+            if [ -f "$KUBECONFIG_PATH" ]; then
+              # 권한 확인 (root 소유라면 변경)
               sudo chown "${{ secrets.USERNAME }}:${{ secrets.USERNAME }}" "$KUBECONFIG_PATH"
               sudo chmod 600 "$KUBECONFIG_PATH"
-              echo "   ✅ Created kubeconfig"
+              
+              # server 주소 수정
+              sed -i "s|server:.*6443|server: https://${{ secrets.HOST_IP }}:6443|g" "$KUBECONFIG_PATH"
+              
+              echo "   ✅ kubeconfig ready"
             else
-              echo "   ✅ kubeconfig already exists"
+              echo "   ❌ kubeconfig not found"
+              exit 1
             fi
             
             # ============================================
-            # 9️⃣ Shell 수정
+            # 8️⃣ Shell 수정
             # ============================================
             echo ""
             echo "🔧 Fixing shell configuration..."
             sudo usermod -s /bin/bash "${{ secrets.USERNAME }}" || true
             echo "   ✅ Shell fixed"
             
-            # 🔟 최종 검증
+            # 9️⃣ 최종 검증
             # ============================================
             echo ""
             echo "✓ Verifying cluster..."
