--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -227,6 +227,10 @@ jobs:
             kube_pods_subnet: 10.244.0.0/16
             kube_service_addresses: 10.96.0.0/12
 
+            # k8s DNS - Pod
+            kube_apiserver_bind_address: 0.0.0.0
+            kube_apiserver_advertise_address: 127.0.0.1
+
             kubelet_deployment_type: host
             kubeadm_init_timeout: 1800
             upgrade_cluster_setup_timeout: 1800
