--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -40,13 +40,13 @@ jobs:
             
             # 1. User shells restore
             echo "🔑 Restoring user shells..."
-            sudo usermod -s /bin/bash ${{ secrets.FIRST_USERNAME }}
-            sudo usermod -s /bin/bash "$USERNAME"
+            sudo usermod -s /bin/bash ${{ secrets.FIRST_USERNAME }} || true
+            sudo usermod -s /bin/bash "$USERNAME" || true
             
             # 2. Kubernetes reset
             echo "🔄 Resetting Kubernetes..."
-            sudo kubeadm reset --force 2>/dev/null
-            sudo systemctl stop kubelet 2>/dev/null
+            sudo kubeadm reset --force 2>/dev/null || true
+            sudo systemctl stop kubelet 2>/dev/null || true
             sudo rm -rf /etc/kubernetes
             sudo rm -rf /var/lib/kubelet
             sudo rm -rf /var/lib/etcd
@@ -77,11 +77,7 @@ jobs:
             
             # 7. Clean ports
             echo "🔌 Cleaning ports..."
-            for port in 6443 2379 10250 10259 10257 8080; do
-              sudo fuser -k -9 $port/tcp 2>/dev/null
-            done
-
-            sleep 3
+            sudo fuser -k -9 6443/tcp 2379/tcp 10250/tcp 10259/tcp 10257/tcp 8080/tcp 2>/dev/null || true
 
             # ✅ 여기에 추가
             echo "🏷️  Setting hostname to USERNAME..."
