--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Connect to Tailscale
         uses: tailscale/github-action@v2
         with:
@@ -300,31 +300,48 @@ jobs:
             kube_pods_subnet: 10.244.0.0/16
             kube_service_addresses: 10.96.0.0/12
 
-            # k8s DNS - Pod
+            # ✅ 명시적 API Server 설정
             kube_apiserver_bind_address: 127.0.0.1
             kube_apiserver_advertise_address: 127.0.0.1
+            apiserver_endpoint: "https://127.0.0.1:6443"
 
+            # ✅ kubelet 설정 (DNS 명시)
             kubelet_deployment_type: host
-            kubeadm_init_timeout: 1800
-            upgrade_cluster_setup_timeout: 1800
-            skip_kubelet_systemd_environment_file_checks: true
-
-            kube_dns_servers:
-              - 10.96.0.10
-            kubelet_cluster_dns: 10.96.0.10
-            kubelet_extra_args: "--cluster-dns=10.96.0.10 --cluster-domain=cluster.local"
-
-            containerd_cgroup_driver: systemd
             kubelet_cgroup_driver: systemd
+            kubelet_extra_args: "--cluster-dns=10.96.0.10 --cluster-domain=cluster.local --cgroup-driver=systemd"
+            kubelet_cluster_dns:
+              - 10.96.0.10
 
+            # ✅ Pause image 설정
+            sandbox_image_repo: registry.k8s.io
+            sandbox_image_tag: "3.10"
+
+            # ✅ etcd 설정
+            etcd_deployment_type: host
+            etcd_extra_args:
+              - --listen-client-urls=http://127.0.0.1:2379
+              - --advertise-client-urls=http://127.0.0.1:2379
+
+            # ✅ containerd 설정
+            containerd_cgroup_driver: systemd
+            containerd_extra_runtime_args: []
+
+            # ✅ kubeadm 타임아웃
+            kubeadm_init_timeout: 1800s
+
+            # ✅ CNI
+            kube_network_plugin: calico
+            calico_version: v3.28.0
+
+            # ✅ 인증서 SAN
             apiserver_cert_extra_sans:
-              - "localhost"
-              - "127.0.0.1"
-              - "$HOST_IP"
-              - "kubernetes"
-              - "kubernetes.default"
-              - "kubernetes.default.svc"
-              - "kubernetes.default.svc.cluster.local"
+              - localhost
+              - 127.0.0.1
+              - "{{ inventory_hostname }}"
+              - kubernetes
+              - kubernetes.default
+              - kubernetes.default.svc
+              - kubernetes.default.svc.cluster.local
             EOF
 
             echo "   ✅ Inventory configured"
