--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Connect to Tailscale
+      - name: 🌎 Connect to Tailscale
         uses: tailscale/github-action@v2
         with:
           version: 1.94.1
@@ -33,134 +33,61 @@ jobs:
           script: |
             set -e
 
-            echo "🧹 Cleanup Phase (Enhanced)"
+            echo "🧹 Cleanup Phase"
             echo "════════════════════════════════════"
 
             USERNAME="${{ secrets.USERNAME }}"
 
             # 1. User shells restore
             echo "🔑 Restoring user shells..."
-            sudo usermod -s /bin/bash ${{ secrets.FIRST_USERNAME }} || true
+            sudo usermod -s /bin/bash root || true
             sudo usermod -s /bin/bash "$USERNAME" || true
 
-            # 2. 모든 서비스/프로세스 중지
-            echo "🛑 Stopping all services..."
-            sudo systemctl stop kubelet 2>/dev/null || true
-            sudo systemctl stop etcd 2>/dev/null || true
-            sudo systemctl stop containerd 2>/dev/null || true
-            sudo systemctl disable kubelet 2>/dev/null || true
-            sudo systemctl disable etcd 2>/dev/null || true
-
-            sleep 2
-
-            # 3. 프로세스 강제 종료
-            echo "🔪 Killing processes..."
-            for proc in kubelet apiserver etcd kube-controller-manager kube-scheduler kube-proxy coredns etcd-io containerd; do
-              sudo pkill -9 $proc 2>/dev/null || true
-            done
-
-            sleep 2
-
-            # 4. Docker/containerd 정리
-            echo "🗑️  Cleaning containers..."
-            if command -v docker &> /dev/null; then
-              sudo docker ps -aq 2>/dev/null | xargs -r sudo docker rm -f 2>/dev/null || true
-            fi
-            if command -v crictl &> /dev/null; then
-              sudo crictl ps -a -q 2>/dev/null | xargs -r sudo crictl rm 2>/dev/null || true
-            fi
-
-            # 5. Kubernetes reset
+            # 2. Kubernetes reset
             echo "🔄 Resetting Kubernetes..."
             sudo kubeadm reset --force 2>/dev/null || true
+            sudo systemctl stop kubelet 2>/dev/null || true
+            sudo rm -rf /etc/kubernetes
+            sudo rm -rf /var/lib/kubelet
+            sudo rm -rf /var/lib/etcd
+            sudo rm -rf /var/lib/cni
 
-            sleep 2
-
-            # 6. 🆕 강제 디렉토리 정리 (재귀 + force)
-            echo "🗂️  Force cleaning directories..."
-            sudo rm -rf --force /etc/kubernetes 2>/dev/null || true
-            sudo rm -rf --force /var/lib/kubelet 2>/dev/null || true
-            sudo rm -rf --force /var/lib/etcd 2>/dev/null || true
-            sudo rm -rf --force /var/lib/cni 2>/dev/null || true
-            sudo rm -rf --force /etc/cni/net.d 2>/dev/null || true
-            sudo rm -rf --force /var/lib/calico 2>/dev/null || true
-
-            # 7. 🆕 containerd 캐시 정리
-            echo "🧹 Cleaning containerd..."
-            sudo systemctl stop containerd 2>/dev/null || true
-            sudo pkill -9 containerd 2>/dev/null || true
-            sudo rm -rf --force /var/lib/containerd 2>/dev/null || true
-            sudo rm -rf --force /run/containerd 2>/dev/null || true
-
-            sleep 2
-
-            # 8. 🆕 Kubelet 데이터 정리
-            echo "🗑️  Cleaning kubelet data..."
-            sudo rm -rf --force /var/lib/kubelet/pods 2>/dev/null || true
-            sudo rm -rf --force /var/lib/kubelet/pod_resources 2>/dev/null || true
-            sudo rm -rf --force /var/lib/kubelet/device-plugins 2>/dev/null || true
-            sudo rm -rf --force /var/lib/kubelet/kubeadm-flags.env 2>/dev/null || true
-            sudo rm -rf --force /var/lib/kubelet/config.yaml 2>/dev/null || true
-
-            # 9. Kubespray cleanup
+            # 3. Kubespray cleanup
             echo "📦 Cleaning Kubespray..."
             [ -d /opt/kubespray ] && sudo rm -rf /opt/kubespray
             [ -d /opt/venv-kubespray ] && sudo rm -rf /opt/venv-kubespray
 
-            # 10. Home directories cleanup
+            # 4. Home directories cleanup
             echo "🏠 Cleaning home directories..."
-            sudo rm -rf /home/$USERNAME/.kube 2>/dev/null || true
-            sudo rm -rf /home/$USERNAME/.ansible 2>/dev/null || true
-            sudo rm -rf /home/$USERNAME/.cache/pip 2>/dev/null || true
+            sudo rm -rf /home/$USERNAME/.kube
+            sudo rm -rf /home/$USERNAME/.ansible
+            sudo rm -rf /home/$USERNAME/.cache/pip
 
-            # 11. Prepare /opt
+            # 5. Prepare /opt
             echo "📁 Preparing /opt..."
             sudo mkdir -p /opt
             sudo chown -R "$USERNAME:$USERNAME" /opt
 
-            # 12. Configure sudoers
+            # 6. Configure sudoers
             echo "🔐 Configuring sudoers..."
             if ! sudo grep -q "^$USERNAME ALL=(ALL) NOPASSWD: ALL" /etc/sudoers.d/$USERNAME 2>/dev/null; then
               echo "$USERNAME ALL=(ALL) NOPASSWD: ALL" | sudo tee /etc/sudoers.d/$USERNAME > /dev/null
               sudo chmod 440 /etc/sudoers.d/$USERNAME
             fi
 
-            # 13. 🆕 포트 정리 (재시도)
-            echo "🔌 Cleaning ports (with retry)..."
-            max_retries=5
-            for attempt in $(seq 1 $max_retries); do
-              # 포트 강제 해제
-              for port in 6443 2379 10250 10259 10257 8080; do
-                sudo fuser -k -9 $port/tcp 2>/dev/null || true
-              done
-              
-              # 포트 상태 확인
-              ports_in_use=$(sudo netstat -tlnp 2>/dev/null | grep -E '6443|10259|10257' | wc -l || echo 0)
-              if [ $ports_in_use -eq 0 ]; then
-                echo "✅ All ports free (attempt $attempt/$max_retries)"
-                break
-              fi
-              
-              echo "⚠️  Ports still in use, retrying... ($attempt/$max_retries)"
-              sleep 2
-            done
+            # 7. Clean ports
+            echo "🔌 Cleaning ports..."
+            sudo fuser -k -9 6443/tcp 2379/tcp 10250/tcp 10259/tcp 10257/tcp 8080/tcp 2>/dev/null || true
 
-            # 14. 🆕 검증: 파일 확인
-            echo "🔍 Verifying cleanup..."
-            if [ ! -d /etc/kubernetes ]; then
-              echo "   ✅ /etc/kubernetes removed"
-            else
-              echo "   ❌ /etc/kubernetes still exists!"
-              ls -la /etc/kubernetes/
-              sudo rm -rf /etc/kubernetes
-            fi
-
-            # 15. Hostname 설정
-            echo "🏷️  Setting hostname..."
+            # ✅ 여기에 추가
+            echo "🏷️  Setting hostname to USERNAME..."
             sudo hostnamectl set-hostname "${{ secrets.USERNAME }}"
 
             sleep 3
-            echo "✅ Enhanced Cleanup complete"
+            echo "✅ Cleanup complete"
+
+            sleep 3
+            echo "✅ Cleanup complete"
 
       # ════════════════════════════════════════
       # Phase 2: Setup (USERNAME)
@@ -300,31 +227,27 @@ jobs:
             kube_pods_subnet: 10.244.0.0/16
             kube_service_addresses: 10.96.0.0/12
 
-            kube_apiserver_bind_address: 127.0.0.1
-            kube_apiserver_advertise_address: 127.0.0.1
-
             kubelet_deployment_type: host
-            kubelet_cgroup_driver: systemd
-            kubelet_cluster_dns:
-              - 10.96.0.10
-            kubelet_extra_args: "--cluster-dns=10.96.0.10 --cluster-domain=cluster.local"
-
-            sandbox_image_repo: registry.k8s.io
-            sandbox_image_tag: "3.10"
-
-            kubeadm_init_timeout: "600s"
+            kubeadm_init_timeout: 1800
+            upgrade_cluster_setup_timeout: 1800
             skip_kubelet_systemd_environment_file_checks: true
 
-            kube_network_plugin: none
+            kube_dns_servers:
+              - 10.96.0.10
+            kubelet_cluster_dns: 10.96.0.10
+            kubelet_extra_args: "--cluster-dns=10.96.0.10 --cluster-domain=cluster.local"
+
+            containerd_cgroup_driver: systemd
+            kubelet_cgroup_driver: systemd
 
             apiserver_cert_extra_sans:
-              - localhost
-              - 127.0.0.1
-              - "{{ inventory_hostname }}"
-              - kubernetes
-              - kubernetes.default
-              - kubernetes.default.svc
-              - kubernetes.default.svc.cluster.local
+              - "localhost"
+              - "127.0.0.1"
+              - "$HOST_IP"
+              - "kubernetes"
+              - "kubernetes.default"
+              - "kubernetes.default.svc"
+              - "kubernetes.default.svc.cluster.local"
             EOF
 
             echo "   ✅ Inventory configured"
@@ -395,7 +318,7 @@ jobs:
       # ════════════════════════════════════════
       # Phase 3: Verification (FIRST_USERNAME)
       # ════════════════════════════════════════
-      - name: Post-Setup Verification
+      - name: 💎 Post-Setup Verification
         if: always()
         uses: appleboy/ssh-action@master
         with:
