--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -1,11 +1,11 @@
-name: Kubespray K8s
+name: "Step 1: Kubespray K8s"
 
 on:
   workflow_dispatch:
-  push:
-    branches: [master]
-    paths:
-      - ".github/workflows/bootstrap.yml"
+  # push:
+  #   branches: [ master ]
+  #   paths:
+  #     - ".github/workflows/bootstrap.yml"
 
 jobs:
   setup:
@@ -29,7 +29,7 @@ jobs:
         with:
           host: ${{ secrets.PROXMOX_VM_TAILSCALE_IP }}
           username: ${{ secrets.FIRST_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.SSH_PRIVATE_KEY_GITHUB }}
           script: |
             set -e
 
