--- a/.github/workflows/argocd-setup.yaml
+++ b/.github/workflows/argocd-setup.yaml
@@ -34,7 +34,7 @@ jobs:
             # 1. ArgoCD 설치
             echo "🚀 Installing ArgoCD..."
             kubectl create namespace argocd || true
-            kubectl apply --server-side -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+            kubectl apply --server-side --force-conflicts -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
 
             # 2. ArgoCD 대기 (Ready 상태 확인)
             echo "⏳ Waiting for ArgoCD components..."
